# bazel-playground

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  a.agdai  agda.bzl  agdas  cubical.nix  file.nix  myrule.bzl  myrule_test.bzl  myrule_validator.sh  myrule_validator.sh.template
testing/: BUILD.bazel  lib-agda.bzl  lib.bzl
