load('myrule.bzl', 'myrule', 'myrule_validation')
load('myrule_test.bzl', 'myrule_validation_test')
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load('agda.bzl', 'agda')

myrule(
    name = "mytarget"
)

sh_test(
    name = "validate_myrule",
    srcs = ["myrule_validator.sh"],
    args = ["mytarget.out"],
    data = [":mytarget"],
)

diff_test(
    name = "same_abc",
    file1 = ":mytarget",
    file2 = "abc.txt"
)

myrule_validation(
    name = "script",
    target = ":mytarget",
    template = "myrule_validator.sh.template"
)

filegroup(
    name = "my_template",
    srcs = [":myrule_validator.sh.template"],
)

myrule_validation_test(
    name = "validate_mytarget",
    target = ":mytarget"
)

agda(
    name = "agda",
    inputs = ["a.agda"],
)

test_suite(
    name = "nixpkgs_test-suit",
    tests = [
        "@nixpkgs_test//:python2-test",
    ],
)

filegroup(
    name = "my_file",
    srcs = [ "@simple_file//:agda-nix" ],
)